Document standalone repository migration